--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -1,5 +1,7 @@
 editors:
   - version: trunk
+  - version: fast-trunk
+  - version: CUSTOM-REVISION
 projects:
   - name: Universal
     folder: UniversalGraphicsTest
@@ -20,8 +22,9 @@ projects:
   - name: VFX_LWRP
     folder: VisualEffectGraph_LWRP
 ---
-all_project_ci:
-  name: ABV for SRP repository
+{% for editor in editors %}
+all_project_ci_{{ editor.version }}:
+  name: ABV for SRP repository - {{ editor.version }}
   agent:
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
@@ -30,7 +33,8 @@ all_project_ci:
   - dir
   dependencies:
   {% for project in projects %}
-    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}
+
+    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}_{{ editor.version }}
       rerun: always
   {% endfor %}
   triggers:
@@ -41,3 +45,4 @@ all_project_ci:
     logs:
       paths:
         - "**/test-results/**"
+{% endfor %}
