--- a/.yamato/upm-ci-shadergraph_stereo.yml
+++ b/.yamato/upm-ci-shadergraph_stereo.yml
@@ -3,7 +3,7 @@ editors:
     cmd: -u trunk
   - version: fast-trunk
     cmd: -u trunk --fast
-  - version: CUSTOM REVISION
+  - version: CUSTOM-REVISION
     cmdwin: -r %CUSTOM_REVISION%
     cmdposix: -r $CUSTOM_REVISION
 platforms:
@@ -36,7 +36,7 @@ projects:
     {% endif %}
     image: {{ platform.image }}
     flavor: {{ platform.flavor}}
-{% if editor.version == 'CUSTOM REVISION' %}
+{% if editor.version == 'CUSTOM-REVISION' %}
   variables:
     CUSTOM_REVISION: custom_revision_not_set
 {% endif %}
@@ -45,7 +45,7 @@ projects:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     
-    {% if editor.version == 'CUSTOM REVISION' %}
+    {% if editor.version == 'CUSTOM-REVISION' %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmdwin }} -c editor --wait --published
     {% else %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
@@ -63,10 +63,10 @@ projects:
         - "**/upm-ci~/test-results/**/*"       
 {% endfor %}
 {% endfor %}
-{% endfor %}
 
-All_{{ project.name }}:
-  name: All {{ project.name }} CI
+
+All_{{ project.name }}_{{ editor.version }}:
+  name: All {{ project.name }} CI - {{ editor.version }}
   agent:
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
@@ -76,9 +76,9 @@ All_{{ project.name }}:
   dependencies:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_trunk
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endfor %}
   {% endfor %}
 
-  
+{% endfor %} 
 {% endfor %}
