--- a/.yamato/upm-ci-universal.yml
+++ b/.yamato/upm-ci-universal.yml
@@ -3,7 +3,7 @@ editors:
     cmd: -u trunk
   - version: fast-trunk
     cmd: -u trunk --fast
-  - version: CUSTOM REVISION
+  - version: CUSTOM-REVISION
     cmdwin: -r %CUSTOM_REVISION%
     cmdposix: -r $CUSTOM_REVISION
 platforms:
@@ -53,20 +53,6 @@ linux_apis:
 
 {% if platform.name == "Windows64" %}
 
-# {% if editor.version == 'CUSTOM REVISION' %}
-# {% assign with_custom_revision = true %}
-# {% assign versionid = 'customrev' %}
-# {% assign version_name = 'custom revision' %}
-# {% assign downloader_arg_posix = '-r $CUSTOM_REVISION' %}
-# {% assign downloader_arg_win = '-r %CUSTOM_REVISION%' %}
-# {% else %}
-# {% assign with_custom_revision = false %}
-# {% assign versionid = editor.version %}
-# {% assign version_name = 'version ' | append:editor.version %}
-# {% assign downloader_arg_posix = '-b ' | append:editor.version %}
-# {% assign downloader_arg_win = downloader_arg_posix %}
-# {% endif %}
-
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
 {{ project.name }}_Windows64_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
@@ -79,7 +65,7 @@ linux_apis:
     {% endif %} 
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
-{% if editor.version == 'CUSTOM REVISION' %}
+{% if editor.version == 'CUSTOM-REVISION' %}
   variables:
     CUSTOM_REVISION: custom_revision_not_set
 {% endif %}
@@ -88,7 +74,7 @@ linux_apis:
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     
-    {% if editor.version == 'CUSTOM REVISION' %}
+    {% if editor.version == 'CUSTOM-REVISION' %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmdwin }} -c editor --wait --published
     {% else %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
@@ -115,7 +101,7 @@ linux_apis:
     type: {{ platform.type }}
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
-{% if editor.version == 'CUSTOM REVISION' %}
+{% if editor.version == 'CUSTOM-REVISION' %}
   variables:
     CUSTOM_REVISION: custom_revision_not_set
 {% endif %}
@@ -124,7 +110,7 @@ linux_apis:
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     
-    {% if editor.version == 'CUSTOM REVISION' %}
+    {% if editor.version == 'CUSTOM-REVISION' %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmdposix }} -c editor --wait --published
     {% else %}
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
@@ -153,7 +139,7 @@ linux_apis:
     type: {{ platform.type }}
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
-{% if editor.version == 'CUSTOM REVISION' %}
+{% if editor.version == 'CUSTOM-REVISION' %}
   variables:
     CUSTOM_REVISION: custom_revision_not_set
 {% endif %}
@@ -163,7 +149,7 @@ linux_apis:
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
-    {% if editor.version == 'CUSTOM REVISION' %}
+    {% if editor.version == 'CUSTOM-REVISION' %}
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmdposix }} -c editor --wait --published'
     {% else %}
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmd }} -c editor --wait --published'
@@ -203,7 +189,7 @@ linux_apis:
     {% endif %} 
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
-{% if editor.version == 'CUSTOM REVISION' %}
+{% if editor.version == 'CUSTOM-REVISION' %}
   variables:
     CUSTOM_REVISION: custom_revision_not_set
 {% endif %}
@@ -213,7 +199,7 @@ linux_apis:
     - sudo npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     
-    {% if editor.version == 'CUSTOM REVISION' %}
+    {% if editor.version == 'CUSTOM-REVISION' %}
     - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli {{ editor.cmdposix }} -c editor --wait --published
     {% else %}
     - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
@@ -231,15 +217,13 @@ linux_apis:
 {% endfor %}
 {% endfor %}
 
-#All_{{ project.name }}_{{versionid}}:
-#  name: All {{ project.name }} CI on {{version_name}}
 
 {% endif %}
 {% endfor %}
-{% endfor %}
 
-All_{{ project.name }}:
-  name: All {{ project.name }} CI
+
+All_{{ project.name }}_{{ editor.version }}:
+  name: All {{ project.name }} CI - {{ editor.version }}
   agent:
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
@@ -252,7 +236,7 @@ All_{{ project.name }}:
   {% if platform.name == "OSX_OpenGLCore" %}
 
   {% if testplatform.name == "editmode" %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_trunk
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
   
   {% elsif platform.name == "Linux" %}
@@ -266,15 +250,16 @@ All_{{ project.name }}:
   {% if win_api.name == "Vulkan" %}
   #skip
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ win_api.name }}_{{ testplatform.name }}_trunk
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_trunk
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
 
   {% endfor %}
   {% endfor %}
   
+{% endfor %}
 {% endfor %}
