--- a/TestProjects/ShaderGraph/Packages/manifest.json
+++ b/TestProjects/ShaderGraph/Packages/manifest.json
@@ -50,6 +50,7 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
+  "disableProjectUpdate": true,
   "testables": [
     "com.unity.shadergraph",
     "com.unity.testframework.graphics"
