--- a/TestProjects/VisualEffectGraph/Packages/manifest.json
+++ b/TestProjects/VisualEffectGraph/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.modules.ui": "1.0.0",
     "com.unity.modules.vr": "1.0.0"
   },
+  "disableProjectUpdate": true,
   "testables": [
     "com.unity.testing.visualeffectgraph",
     "com.unity.render-pipelines.visualeffectgraph",
