--- a/.yamato/upm-ci-vfx_lwrp.yml
+++ b/.yamato/upm-ci-vfx_lwrp.yml
@@ -18,7 +18,7 @@ platforms:
     flavor: m1.mac
   - name: Linux
     type: Unity::VM::GPU
-    image: cds-ops/ubuntu-18.04-base:latest
+    image: cds-ops/ubuntu-18.04-base:stable
     flavor: b1.large
 testplatforms:
   - name: Standalone
