--- a/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
@@ -57,6 +57,10 @@ Pass
     $DepthOffset:                        #define _DEPTHOFFSET_ON 1
     $BlendMode.PreserveSpecular:        #define _BLENDMODE_PRESERVE_SPECULAR_LIGHTING 1
 
+	$NormalDropOffTS:					#define _NORMAL_DROPOFF_SPACE	0
+	$NormalDropOffOS:					#define _NORMAL_DROPOFF_SPACE	1
+	$NormalDropOffWS:					#define _NORMAL_DROPOFF_SPACE	2
+
     //-------------------------------------------------------------------------------------
     // End Variant Definitions
     //-------------------------------------------------------------------------------------
@@ -242,12 +246,18 @@ $include("SharedCode.template.hlsl")
     float3 doubleSidedConstants = float3(1.0, 1.0, 1.0);
 #endif
 
-        // tangent-space normal
-        float3 normalTS = float3(0.0f, 0.0f, 1.0f);
-        $SurfaceDescription.Normal: normalTS = surfaceDescription.Normal;
+        // normal delivered to master node
+        float3 normalSrc = float3(0.0f, 0.0f, 1.0f);
+        $SurfaceDescription.Normal: normalSrc = surfaceDescription.Normal;
 
         // compute world space normal
-        GetNormalWS(fragInputs, normalTS, surfaceData.normalWS, doubleSidedConstants);
+#if _NORMAL_DROPOFF_SPACE==0
+        GetNormalWS(fragInputs, normalSrc, surfaceData.normalWS, doubleSidedConstants);
+#elif _NORMAL_DROPOFF_SPACE==1
+		surfaceData.normalWS = TransformObjectToWorldNormal(normalSrc);
+#elif _NORMAL_DROPOFF_SPACE==2
+		surfaceData.normalWS = normalSrc;
+#endif
 
         surfaceData.geomNormalWS = fragInputs.tangentToWorld[2];
 
