--- a/TestProjects/PostProcessing/Packages/manifest.json
+++ b/TestProjects/PostProcessing/Packages/manifest.json
@@ -6,7 +6,7 @@
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.postprocessing": "2.1.6",
     "com.unity.test-framework": "1.1.5",
-    "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics",
+    "com.unity.testframework.graphics": "7.1.3-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.3.7",
     "com.unity.modules.ai": "1.0.0",
