--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -15,10 +15,6 @@ platforms:
     type: Unity::metal::macmini
     image: slough-ops/macos-10.14-xcode
     flavor: m1.mac
-  - name: Linux_Vulkan
-    type: Unity::VM::GPU
-    image: cds-ops/ubuntu-18.04-base:stable
-    flavor: b1.large
 testplatforms:
   - name: Standalone
     args: --suite=playmode --platform=Standalone
@@ -37,13 +33,19 @@ mac_apis:
 {% for project in projects %}
 {% for editor in editors %}
 {% for platform in platforms %}
+
 {% if platform.name == "Win" %}
+
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
 {{ project.name }}_Win_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
   name : {{ project.name }} on Win_{{ win_api.name }}_{{ testplatform.name }} on version {{ editor.version }}
   agent:
+    {% if testplatform.name == "editmode" %}
+    type: Unity::VM
+    {% else %}
     type: {{ platform.type }}
+    {% endif %} 
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
 {% if editor.version == 'CUSTOM-REVISION' %}
@@ -63,15 +65,22 @@ mac_apis:
 
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
-
+    {% else %}
+    - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }} --extra-editor-arg="{{ win_api.cmd }}" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    {% endif %}
   artifacts:
     logs:
       paths:
         - "**/test-results/**"
 {% endfor %}    
 {% endfor %}
+
 {% elsif platform.name == "OSX_Metal" %}
+
 {% for testplatform in testplatforms %}
+{% if testplatform.name == "editmode" %}
+#skip because we don't need a GPU to run editmode tests
+{% else %}
 {{ project.name }}_OSX_Metal_{{ testplatform.name }}_{{ editor.version }}:
   name : {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
   agent:
@@ -92,13 +101,15 @@ mac_apis:
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmdposix }} -c editor --wait --published'
     {% else %}
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmd }} -c editor --wait --published'
-
     {% endif %}
     
     {% if testplatform.name == "Standalone" %}
     - |
       ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
-
+    {% else %}
+    - |
+      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }} --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results'
+    {% endif %}
       UTR_RESULT=$?
       mkdir -p TestProjects/{{ project.folder }}/test-results/
       scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results/ TestProjects/{{ project.folder }}/test-results/
@@ -108,28 +119,10 @@ mac_apis:
     logs:
       paths:
         - "**/test-results/**"
+{% endif %}
 {% endfor %}
-{% elsif platform.name == "Linux_Vulkan" %}
-{% for testplatform in testplatforms %}
-{{ project.name }}_Linux_Vulkan_{{ testplatform.name }}_{{ editor.version }}:
-  name : {{ project.name }} on Linux_Vulkan_{{ testplatform.name }} on version {{ editor.version }}
-  agent:
-    type: {{ platform.type }}
-    image: {{ platform.image }}      
-    flavor: {{ platform.flavor }}
-  commands:
-    - sudo -H pip install --upgrade pip
-    - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - sudo npm install upm-ci-utils@0.16.0 --registry https://api.bintray.com/npm/unity/unity-npm -g
-    - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
-    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildLinuxVulkanLinear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
 
-  artifacts:
-    logs:
-      paths:
-        - "**/test-results/**"
-{% endfor %}
+ 
 {% endif %}
 {% endfor %}
 
