--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -170,7 +170,7 @@ trunk_verification_{{ editor.version }}:
     #skip
     {% else %}
     
-    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_Windows64_DX11_{{ testplatform.name }}_{{ editor.version }}
+    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_Win_DX11_{{ testplatform.name }}_{{ editor.version }}
       rerun: always
     {% endif %}
     {% endif %}
